# ChangeLog for dev-util/diffstat
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/diffstat/ChangeLog,v 1.117 2012/03/06 16:06:20 ranger Exp $

  06 Mar 2012; Brent Baude <ranger@gentoo.org> diffstat-1.54.ebuild:
  Marking diffstat-1.54 ppc for bug 395691

  02 Mar 2012; Brent Baude <ranger@gentoo.org> diffstat-1.54.ebuild:
  Marking diffstat-1.54 ppc64 for bug 395691

*diffstat-1.55 (03 Jan 2012)

  03 Jan 2012; Tim Harder <radhermit@gentoo.org> +diffstat-1.55.ebuild:
  Version bump. Update to EAPI 4.

  01 Jan 2012; Raúl Porcel <armin76@gentoo.org> diffstat-1.54.ebuild:
  alpha/ia64/s390/sh/sparc/x86 stable wrt #395691

  26 Dec 2011; Jeroen Roovers <jer@gentoo.org> diffstat-1.54.ebuild:
  Stable for HPPA (bug #395691).

  26 Dec 2011; Markus Meier <maekke@gentoo.org> diffstat-1.54.ebuild:
  arm stable, bug #395691

  23 Dec 2011; Agostino Sarubbo <ago@gentoo.org> diffstat-1.54.ebuild:
  Stable for AMD64, wrt bug #395691

  27 Mar 2011; Jeremy Olexa <darkside@gentoo.org> -diffstat-1.51.ebuild:
  remove old ebuilds

  02 Mar 2011; Brent Baude <ranger@gentoo.org> diffstat-1.53.ebuild:
  stable ppc64, bug 350842

  29 Jan 2011; Raúl Porcel <armin76@gentoo.org> diffstat-1.53.ebuild:
  alpha/ia64/s390/sh/sparc stable wrt #350842

  24 Jan 2011; Jeroen Roovers <jer@gentoo.org> diffstat-1.53.ebuild:
  Stable for HPPA (bug #350842).

  15 Jan 2011; Markus Meier <maekke@gentoo.org> diffstat-1.53.ebuild:
  x86 stable, bug #350842

  11 Jan 2011; Markus Meier <maekke@gentoo.org> diffstat-1.53.ebuild:
  arm stable, bug #350842

  09 Jan 2011; Brent Baude <ranger@gentoo.org> diffstat-1.53.ebuild:
  Marking diffstat-1.53 ppc for bug 350842

  07 Jan 2011; Markos Chandras <hwoarang@gentoo.org> diffstat-1.53.ebuild:
  Stable on amd64 wrt bug #350842

*diffstat-1.54 (06 Jan 2011)

  06 Jan 2011; Justin Lecher <jlec@gentoo.org> +diffstat-1.54.ebuild,
  metadata.xml:
  Version Bump, Some Clean up
