@@ -1,8 +1,16 @@
-DIST diffstat-1.53.tgz 215069 RMD160 37e5f407042c54613e2b76356b2230ad84cab6af SHA1 d4664857b64fe81c1ef35b4f4afc81c774513597 SHA256 8110414819b0cac34afb2a0afd244636572db1cefec5e970e7fa4ca5b71e3f75
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA512
+
 DIST diffstat-1.54.tgz 215549 RMD160 f85c4f771398f942e6ab12fd642ac52a9cd84b4a SHA1 e68fa0f90744fc3271d38abecc3d3f5f2aa19375 SHA256 d8e67660ec85be597f8548ecdd088926639dac34ec7184aaf9d09c1e6ecb83e5
 DIST diffstat-1.55.tgz 235836 RMD160 213673a4d06b41e8502d40eda8448332ce401b76 SHA1 625650a9f1a27edbb98316adb3013e57c8e2e23a SHA256 59a46c75a99f2c373a81880051adc43a17b71c55478691e702c61c13c6d61b55
-EBUILD diffstat-1.53.ebuild 715 RMD160 db420b1c69089ec4d707dca4529dc891643d10b8 SHA1 ffc0cbaf4111004790ff4375818be62689e5fbb9 SHA256 c1fa4ebaebe0cb052655cb62d82a65d2b0701362de6e89b0f7f988813246b6da
 EBUILD diffstat-1.54.ebuild 715 RMD160 bd268bc8496c7483196cb0226977c6ca191b8602 SHA1 53d8ff4403f1a248c833a44f738e46581139933d SHA256 999f46ba2b7d82e19c3c606d5620be8b6f92b39a75baafc07a831ba92718752a
 EBUILD diffstat-1.55.ebuild 601 RMD160 1b0ce31c0f7fdc6f665de98eea693a6111fcc7e1 SHA1 9048ca0bcbee719b7654aa19362c406a73a15ef0 SHA256 d023a601e379fe5ac59d721c04e622bb85f777ecc2aa4e402207c552afcfa724
-MISC ChangeLog 13604 RMD160 5c5ac08245bd44e0516448ccecc14e159d930a43 SHA1 063104997783b69a04ab258ef26b59996c766238 SHA256 e94e6482b6dd703adbc13a33a75bdb13f57f717848296be6355276eee2f0b02e
-MISC metadata.xml 257 RMD160 797697638de86e56951593f5a62de2a02c002f24 SHA1 392b7acfe4722175e6864418ab4c56574767769a SHA256 ae94b43044ead4c5bf60f8d9a84f91984c729112467c6b406b197323847c499a
+MISC ChangeLog 13700 RMD160 35b9e7bb0d05739e509c6f7b198251f0be30bbe7 SHA1 59dcb194c94561e690e9646d4397414386245f6d SHA256 bc36fc234cf041cab7a05b3cc72c873a21c2ac758de34e5ab08d66d1f465c474
+MISC metadata.xml 260 RMD160 6faade3f1897e982508324fab7aaf2f86bc24f86 SHA1 072fb1cdadd003820d0585524c1e70eb51acdfd1 SHA256 cceb3d6fcf1bd0b07e1a84b4d94c60550d65cf1f2db041b7a25cf39fea5bcc31
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.18 (GNU/Linux)
+
+iEYEAREKAAYFAk9WVh4ACgkQgAnW8HDreRbv6wCfRtDHBg1QbOLeXqiBzWEI1YyK
+t2IAnj0ZEwQlwGzRA8Me33Nm8u5rCe4z
+=YG8V
+-----END PGP SIGNATURE-----
