@@ -2,7 +2,7 @@
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
 	<herd>shell-tools</herd>
-<upstream>
-	<changelog>http://invisible-island.net/diffstat/CHANGES</changelog>
-</upstream>
+	<upstream>
+		<changelog>http://invisible-island.net/diffstat/CHANGES</changelog>
+	</upstream>
 </pkgmetadata>
